# pytest-docker-mysql-example

./: README.md  docker-compose-postgres.yml  docker-compose.mysql.yml  docker-compose.postgresql.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
initdb.d/: users.sql
initdb.d-postgres/: users.sql
myapp/: main.py  server.py
myapp/apis/: user.py
myapp/models/: base.py  user.py
myapp/server/: gunicorn.py  main.py
mysql/initdb.d/: users.sql
postgresql/initdb.d/: users.sql
src/: app.py  config.py
src/models/: base.py  users.py
tests/: conftest.py  test_users.py
